# DCL_EN_Labyrinth2

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  DCL_EN_Labyrinth2Config.cmake.in
src/Components/: CMakeLists.txt
src/Components/Init/: CMakeLists.txt  Init.cpp  Init.hpp
src/Components/LabyrinthReading/: CMakeLists.txt  LabyrinthReading.cpp  LabyrinthReading.hpp
src/Components/Mrrocpp/: Mrrocpp_Proxy.cpp  Mrrocpp_Proxy.hpp
src/Components/RecognizeLabyrinth/: CMakeLists.txt  RecognizeLabyrinth.cpp  RecognizeLabyrinth.hpp
src/Types/: CMakeLists.txt
src/Types/Mrrocpp_Proxy/: LabyrinthData.hpp  Reading.hpp
tasks/: Recognize.xml  Solve.xml  SolveCamera.xml  SolveCamera2.xml
